src/test/deca/context/valid/self/ifThenElse.deca
{
int a = 0;
if(3<=2){
    println("hello");
}
else if(1==1){
    println("goodbye");
}
else {
    println("hola"); a = a +1;}



if(1!=3){
    println("ca marche");
}
}



