src/test/deca/context/invalid/self/doubleDef.deca
{
    int a =2;
    int a =3;
}